Overflow Html Fixed Home Page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,12 @@ html, body {
 
 }
 
+.hiddenhtml {
+
+overflow-x: hidden;
+
+}
+
 .container { position:relative; }
 
 .container video {
